Correct contrast

--- a/src/assets/sass/modules/_forms-input-range.scss
+++ b/src/assets/sass/modules/_forms-input-range.scss
@@ -53,7 +53,7 @@
     width: 20px;
     height: 20px;
     margin-top: -5px;
-    border: 1px solid var(--color-border-dark);
+    border: 1px solid var(--color-border-extra-dark);
     border-radius: 50%;
     box-shadow: var(--standard-shadow);
     appearance: none;
